--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "dingo/api": "^3.0",
         "doctrine/dbal": "^3.2",
         "fruitcake/laravel-cors": "^2.0",
